// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middleware start url \`/\` should redirect to URL without action if action is in query 1`] = `
Array [
  Array [
    "start",
    Object {
      "redirect": Object {
        "pathname": "/view/1234/",
        "query": Object {
          "*": "token for {\\"url\\":\\"ya-disk-public://some-hash\\",\\"title\\":\\"some-name\\",\\"noiframe\\":false,\\"uid\\":1234,\\"ts\\":0,\\"yu\\":1234} (ts replaced with 0)",
        },
      },
    },
  ],
]
`;

exports[`middleware start url \`/\` should render 400 for unknown protocol 1`] = `
Array [
  Array [
    "error",
    Object {
      "code": 400,
    },
  ],
]
`;

exports[`middleware start url \`/\` should render 403 error page for second time if auth is needed but not present 1`] = `
Array [
  Array [
    "error",
    Object {
      "code": 403,
    },
  ],
]
`;

exports[`middleware start url \`/\` should render NO-URL for request without url 1`] = `
Array [
  Array [
    "no-url",
    Object {},
  ],
]
`;

exports[`middleware start url \`/\` should render error if start answered with error 1`] = `
Array [
  Array [
    "error",
    Object {
      "code": 520,
      "redirect": Object {
        "pathname": "/view/1234/",
        "query": Object {
          "*": "token for {\\"url\\":\\"ya-mail://bar\\",\\"title\\":\\"bar\\",\\"noiframe\\":false,\\"uid\\":1234,\\"ts\\":0,\\"yu\\":1234} (ts replaced with 0)",
        },
      },
    },
  ],
]
`;

exports[`middleware start url \`/\` should render error if start rejected 1`] = `
Array [
  Array [
    "error",
    Object {
      "code": 500,
      "redirect": Object {
        "pathname": "/view/1234/",
        "query": Object {
          "*": "token for {\\"url\\":\\"ya-mail://bar\\",\\"title\\":\\"bar\\",\\"noiframe\\":false,\\"uid\\":1234,\\"ts\\":0,\\"yu\\":1234} (ts replaced with 0)",
        },
      },
    },
  ],
]
`;

exports[`middleware start url \`/\` should render old browser stub if ua is not supported 1`] = `
Array [
  Array [
    "no-url",
    Object {},
  ],
]
`;

exports[`middleware start url \`/\` should render passport-redirect if auth is needed but not present 1`] = `
Array [
  Array [
    "passport-redirect",
    Object {},
  ],
]
`;

exports[`middleware start url \`/\` should render passport-redirect if uid in query is not equal to current uid 1`] = `
Array [
  Array [
    "passport-redirect",
    Object {},
  ],
]
`;

exports[`middleware start url \`/\` should render start if everything is fine 1`] = `
Array [
  Array [
    "start",
    Object {
      "redirect": Object {
        "pathname": "/view/1234/",
        "query": Object {
          "*": "token for {\\"url\\":\\"ya-mail://bar\\",\\"title\\":\\"bar\\",\\"noiframe\\":false,\\"uid\\":1234,\\"ts\\":0,\\"yu\\":1234} (ts replaced with 0)",
        },
      },
    },
  ],
]
`;

exports[`middleware start url \`/view/\` should generate new token and successfully render 1`] = `
Array [
  Array [
    "start",
    Object {
      "redirect": Object {
        "pathname": "/view/1/",
        "query": Object {
          "*": "token for {\\"title\\":\\"[Untitled]\\",\\"noiframe\\":false,\\"uid\\":\\"1\\",\\"ts\\":0,\\"yu\\":\\"222\\"} (ts replaced with 0)",
          "lang": "fr",
        },
      },
    },
  ],
]
`;

exports[`middleware start url \`/view/\` should redirect to passport for private protocols if token user mismatches authorized one 1`] = `
Array [
  Array [
    "passport-redirect",
    Object {},
  ],
]
`;

exports[`middleware start url \`/view/\` should redirect to passport if password is not set yet 1`] = `
Array [
  Array [
    "passport-redirect",
    Object {},
  ],
]
`;

exports[`middleware start url \`/view/\` should render 400 if token is missing 1`] = `
Array [
  Array [
    "error",
    Object {
      "code": 400,
    },
  ],
]
`;

exports[`middleware start url \`/view/\` should render error if previous middleware errored 1`] = `
Array [
  Array [
    "error",
    Object {
      "code": 403,
    },
  ],
]
`;

exports[`middleware start url \`/view/\` should render old browser stub if ua is not supported 1`] = `
Array [
  Array [
    "old-browsers-stub",
    Object {},
  ],
]
`;
